Fix channel image not showing

--- a/web_developer/javascript/Desafios/Desafios_CSS/Clone Página YouTube/assets/css/global.css
+++ b/web_developer/javascript/Desafios/Desafios_CSS/Clone Página YouTube/assets/css/global.css
@@ -145,7 +145,7 @@ main {
 }
 
 #imagem-canal {
-    background: url('https://yt3.ggpht.com/yI1wflqa2uTsKtAOPj4f78hGjOSyp12uPt-OizVNK8sli7J4xJkx9DJxT1x6q_fTV_ckVYLtcb8=s48-c-k-c0x00ffffff-no-rj') center/100% scroll no-repeat;
+    background: url('../imagens/channel_profile.jpg') center/100% scroll no-repeat;
     padding: 1.3em;
     border: 1px solid rgba(128, 128, 128, 0.342);
     border-radius: 50%;
